<resources>
    <string name="app_name" translatable="false">App Studio</string>

    <string name="txt_next">Next</string>
    <string name="text">Text</string>
    <string name="image">Image</string>
    <string name="voice">Voice</string>
    <string name="crash_button_label">Cause Crash</string>
    <string name="catch_crash_checkbox_label">Catch Crash</string>
    <string name="remote_config">Remote Config</string>
    <string name="write_realtime_db">Write Realtime Database</string>
    <string name="welcome">Welcome…</string>
    <string name="realtime_db">Realtime Database</string>
    <string name="write">Write</string>
    <string name="read">Read</string>
    <string name="firebase_cloud_message">Firebase Cloud Message</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="log_token">Log Token</string>
    <string name="msg_token_fmt">FCM registration Token: %s</string>
    <string name="preparing_data">Preparing Data</string>
    <string name="this_action_can_contain_ads">This action can contain ads</string>
    <string name="notification_access_granted">Notification Access Granted</string>
    <string name="notification_access_denied">Notification Access Denied</string>
    <string name="nothing">Nothing</string>
    <string name="splash">Splash</string>
    <string name="firebase">Firebase</string>
    <string name="admob">AdMob</string>
    <string name="txt_banner">Banner</string>
    <string name="txt_interstitial">Interstitial</string>
    <string name="txt_native">Native</string>
    <string name="txt_rewarded">Rewarded</string>
    <string name="banner_ads">Banner Ads</string>
    <string name="collapsible_banner_ads">Collapsible banner ads</string>
    <string name="interstitial_ads">Interstitial Ads</string>
    <string name="txt_layout_show_interstitial">Layout Show Interstitial</string>
    <string name="txt_item_show_interstitial">Item Show Interstitial</string>
    <string name="txt_interstitial_with_capping_time">Interstitial With Capping Time</string>
    <string name="native_ads">Native Ads</string>
    <string name="txt_native_banner">Native Banner</string>
    <string name="txt_native_small">Native Small</string>
    <string name="txt_native_medium">Native Medium</string>
    <string name="txt_native_large">Native Large</string>
    <string name="txt_native_inline">Native Inline</string>
    <string name="txt_native_full_screen">Native Full Screen</string>
    <string name="txt_native_banner_ads">Native Banner Ads</string>
    <string name="txt_native_banner_old">Native Banner Old</string>
    <string name="txt_native_banner_smart">Native Banner Smart</string>
    <string name="txt_native_small_old">Native Small Old</string>
    <string name="txt_native_small_gnt">Native Small Google Template</string>
    <string name="txt_native_medium_unified">Native Medium Unified</string>
    <string name="txt_native_medium_ads">Native Medium Ads</string>
    <string name="txt_native_medium_old">Native Medium Old</string>
    <string name="txt_native_medium_smart">Native Medium Smart</string>
    <string name="txt_native_medium_old_smart">Native Medium Old Smart</string>
    <string name="txt_native_medium_gnt">Native Medium Google Template</string>
    <string name="txt_native_large_ads">Native Large Ads</string>
    <string name="txt_native_large_old">Native Large Old</string>
    <string name="txt_native_inline_ads">Native Inline Ads</string>
    <string name="txt_native_inline_span_count">Native Inline Span Count</string>
    <string name="txt_native_load_multiple_ads">Native Load Multiple Ads</string>
    <string name="rewarded_ads">Rewarded Ads</string>
    <string name="txt_layout_show_rewarded">Layout Show Rewarded</string>
    <string name="txt_item_show_rewarded">Item Show Rewarded</string>

    <!--    Id Admob Test-->
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="open_ad_unit_id">ca-app-pub-3940256099942544/9257395921</string>
    <string name="banner_adaptive_ad_unit_id">ca-app-pub-3940256099942544/9214589741</string>
    <string name="banner_fixed_size_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="collapsible_banner_ad_unit_id">ca-app-pub-3940256099942544/2014213617</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="interstitial_video_ad_unit_id">ca-app-pub-3940256099942544/8691691433</string>
    <string name="native_ad_unit_id">ca-app-pub-3940256099942544/2247696110</string>
    <string name="native_video_ad_unit_id">ca-app-pub-3940256099942544/1044960115</string>
    <string name="native_video_old_ad_unit_id">ca-app-pub-3940256099942544/2521693316</string>
    <string name="native_full_screen_ad_unit_id">ca-app-pub-3940256099942544/7342230711</string>
    <string name="rewarded_ad_unit_id">ca-app-pub-3940256099942544/5224354917</string>
    <string name="rewarded_interstitial_ad_unit_id">ca-app-pub-3940256099942544/5354046379</string>
    <string name="ad">Ad</string>
    <string name="subscribe_to_topic">Subscribe To Topic</string>
    <string name="unsubscribe_from_topic">Unsubscribe From Topic</string>
    <string-array name="native_ad_unit_ids">
        <item>ca-app-pub-3940256099942544/2247696110</item>
        <item>ca-app-pub-3940256099942544/2521693316</item>
        <item>ca-app-pub-3940256099942544/1044960115</item>
    </string-array>
</resources>