<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.activity.NativeActivity">

    <Button
        android:id="@+id/btnNativeBanner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/txt_native_banner"
        tools:textColor="@color/white" />

    <Button
        android:id="@+id/btnNativeSmall"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/txt_native_small"
        tools:textColor="@color/white" />

    <Button
        android:id="@+id/btnNativeMedium"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/txt_native_medium"
        tools:textColor="@color/white" />

    <Button
        android:id="@+id/btnNativeLarge"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/txt_native_large"
        tools:textColor="@color/white" />

    <Button
        android:id="@+id/btnNativeInline"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/txt_native_inline"
        tools:textColor="@color/white" />

    <Button
        android:id="@+id/btnNativeLoadMultipleAds"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/txt_native_load_multiple_ads"
        tools:textColor="@color/white" />
</LinearLayout>