<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.activity.native_ad.native_medium.NativeMediumActivity">

    <Button
        android:id="@+id/btnNativeMediumUnified"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/txt_native_medium_unified"
        tools:textColor="@color/white" />

    <Button
        android:id="@+id/btnNativeMediumAds"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/txt_native_medium_ads"
        tools:textColor="@color/white" />

    <Button
        android:id="@+id/btnNativeMediumOld"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/txt_native_medium_old"
        tools:textColor="@color/white" />

    <Button
        android:id="@+id/btnNativeMediumSmart"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/txt_native_medium_smart"
        tools:textColor="@color/white" />

    <Button
        android:id="@+id/btnNativeMediumOldSmart"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/txt_native_medium_old_smart"
        tools:textColor="@color/white" />

    <Button
        android:id="@+id/btnNativeMediumGnt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/txt_native_medium_gnt"
        tools:textColor="@color/white" />

</LinearLayout>