<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.activity.interstitial_ad.InterstitialActivity">

    <Button
        android:id="@+id/btnLayoutShowInterstitial"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/txt_layout_show_interstitial"
        tools:textColor="@color/white" />

    <Button
        android:id="@+id/btnItemShowInterstitial"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/txt_item_show_interstitial"
        tools:textColor="@color/white" />

    <Button
        android:id="@+id/btnInterstitialWithCappingTime"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/txt_interstitial_with_capping_time"
        tools:textColor="@color/white" />
</LinearLayout>